mudanca nomes fotos

--- a/index.html
+++ b/index.html
@@ -2637,14 +2637,14 @@
                 path: 'pics/espec/',
                 // Certifique-se que estas fotos estão na pasta pics/espec/
                 images: ['foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.jpg', 'foto5.jpg', 'foto6.jpg', 'foto7.jpg', 'foto8.jpg',
-                            'foto9.jpg', 'foto10.jpg'
+                            'foto9.jpeg', 'foto10.jpeg'
                 ]
             },
             comunitario: {
                 elementId: 'slide-comunitario',
                 path: 'pics/servico/',
                 // Certifique-se que estas fotos estão na pasta pics/servico/
-                images: ['foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.jpg', 'foto5.jpg', 'foto6.jpg']
+                images: ['foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.JPG', 'foto5.JPG', 'foto6.jpg']
             },
             campori: {
                 elementId: 'slide-campori', // O ID que colocamos no HTML
@@ -2745,4 +2745,5 @@
         });
     </script>
 </body>
+
 </html>
