--- a/index.html
+++ b/index.html
@@ -2630,7 +2630,7 @@
                 path: 'pics/acamp/', 
                 // Coloque Apenas o nome do arquivo aqui. 
                 // Converta os HEIC para JPG!
-                images: ['foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.jpg', 'foto5.jpg', 'foto6.jpg', 'foto7.jpg'] 
+                images: ['foto1.jpg', 'foto2.jpg', 'foto3.jpg', 'foto4.jpg', 'foto5.jpg', 'foto6.jpg', 'foto7.jpeg'] 
             },
             especialidades: {
                 elementId: 'slide-especialidades',
@@ -2747,3 +2747,4 @@
 </body>
 
 </html>
+
