--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grandes Heróis | Camporí DSA 2027</title>
+    <link rel="icon" type="image/png" href="pics/logo.png">
+    <link rel="apple-touch-icon" href="pics/logo.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         :root {
@@ -2275,7 +2277,7 @@
                     <span class="tier-icon">💚</span>
                     <h3 class="tier-name">Amigo</h3>
                     <div class="tier-price"><small>R$</small> 500</div>
-                    <p class="tier-installment">ou 10x de R$ 50</p>
+                    <p class="tier-installment">ou 5x de R$ 100</p>
                     <p class="tier-desc">Toda ajuda é bem-vinda! Seu apoio faz parte de uma corrente de solidariedade.</p>
                     <a href="https://wa.me/5561999933816?text=Ol%C3%A1!%20Gostaria%20de%20ajudar%20o%20clube%20com%20a%20cota%20AMIGO%20(R$%20500)." target="_blank" class="btn-tier">Apoiar</a>
                 </div>
@@ -2327,7 +2329,7 @@
                         <h3 class="tier-name">Outro Valor</h3>
                         <p class="tier-desc">Contribua com o valor que puder. Toda ajuda faz a diferença!</p>
                     </div>
-                    <a href="https://wa.me/5561999933816?text=Ol%C3%A1!%20Quero%20contribuir%20com%20o%20sonho%20do%20Campor%C3%AD.%20Como%20fa%C3%A7o%20minha%20doa%C3%A7%C3%A3o?" target="_blank" class="btn-tier">Colabore</a>
+                    <a href="https://wa.me/5561999933816?text=Ol%C3%A1!%20Quero%20contribuir%20com%20o%20sonho%20do%20Campor%C3%AD.%20Como%20fa%C3%A7o%20minha%20doa%C3%A7%C3%A3o?" target="_blank" class="btn-tier">WhatsApp</a>
                 </div>
             </div>
         </div>
@@ -2794,4 +2796,3 @@
 </body>
 
 </html>
-
