Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2329,7 +2329,7 @@
                         <h3 class="tier-name">Outro Valor</h3>
                         <p class="tier-desc">Contribua com o valor que puder. Toda ajuda faz a diferença!</p>
                     </div>
-                    <a href="https://wa.me/5561999933816?text=Ol%C3%A1!%20Quero%20contribuir%20com%20o%20sonho%20do%20Campor%C3%AD.%20Como%20fa%C3%A7o%20minha%20doa%C3%A7%C3%A3o?" target="_blank" class="btn-tier">WhatsApp</a>
+                    <a href="https://wa.me/5561999933816?text=Ol%C3%A1!%20Quero%20contribuir%20com%20o%20sonho%20do%20Campor%C3%AD.%20Como%20fa%C3%A7o%20minha%20doa%C3%A7%C3%A3o?" target="_blank" class="btn-tier">Colaborar</a>
                 </div>
             </div>
         </div>
@@ -2796,3 +2796,4 @@
 </body>
 
 </html>
+
